fix: combination capslock shift

--- a/virtual-keyboard/style.css
+++ b/virtual-keyboard/style.css
@@ -188,10 +188,10 @@ span::after {
 
 .keyboard__key--caps::after {
   /* content: '\21EA'; */
-  content: '\2686';
+  content: '\26AC';
   position: absolute;
-  top: 2px;
-  left: 62px;
+  top: 5px;
+  left: 65px;
   /* color: rgba(240, 232, 232, 0.7); */
   color: rgba(255, 255, 255, 0.7);
 }
